--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,26 @@
-<iframe id="targetSite" src="https://rbtvplus.com" style="width:100%;height:100vh;border:none;"></iframe>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<title>Akses RBTV Tanpa Iklan Tertentu</title>
+<style>
+    body, html { margin:0; padding:0; height:100%; }
+    iframe { width:100%; height:100%; border:none; }
+</style>
+</head>
+<body>
+
+<iframe src="https://rbtvplus.com" id="webview"></iframe>
 
 <script>
-document.getElementById('targetSite').onload = function() {
-    let frameDoc = this.contentDocument || this.contentWindow.document;
-    let ads = frameDoc.querySelectorAll('a[href*="cutt.ly/rbtv-app"]');
-    ads.forEach(ad => ad.remove());
-};
+document.addEventListener("click", function(e) {
+    let target = e.target.closest("a");
+    if (target && target.href.includes("cutt.ly/rbtv-app")) {
+        e.preventDefault();
+        alert("Link iklan diblokir 🚫");
+    }
+});
 </script>
+
+</body>
+</html>
