--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
 <!-- iframe dengan sandbox ketat -->
 <iframe 
     id="targetSite" 
-    src="https://rbtvplus.com"
+    src="https://ganz0mxu.5m27soldqbw8gyard.shop/id/football/german-bundesliga-2-4206826/vfl-bochum-1848-vs-sv-elversberg.html?icg=SUQ&ilang=id"
     sandbox="allow-same-origin allow-forms allow-scripts"
     referrerpolicy="no-referrer"
 ></iframe>
