--- a/Index.html
+++ b/Index.html
@@ -3,19 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Website Proxy Iframe</title>
+  <title>Proxy Iframe Streaming</title>
   <style>
     body, html {
       margin: 0; padding: 0; height: 100vh; overflow: hidden;
     }
     iframe {
-      border: none;
       width: 100%;
       height: 100vh;
+      border: none;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://gentle-block-5894.974hyacintha.workers.dev/id/football/portuguese-primera-liga-4225353/fc-famalicao-vs-santa-clara.html?icg=SUQ&__cf_chl_rt_tk=N_BL2nVwM0PBaa6BNR0_Tda4hFVJUJOb6HtJ0q3S5d4-1754848053-1.0.1.1-nj_odtmtJqugLFZ8fCRr_vnsd1blt3vsIjlz9bJ6vjo"></iframe>
+  <iframe
+    src="https://gentle-block-5894.974hyacintha.workers.dev/?url=https%3A%2F%2Fgenegc02.ya8z6nutsz3jhbtmail.shop%2Fid%2Ffootball%2Fportuguese-primera-liga-4225353%2Ffc-famalicao-vs-santa-clara.html%3Ficg%3DSUQ%26__cf_chl_rt_tk%3DN_BL2nVwM0PBaa6BNR0_Tda4hFVJUJOb6HtJ0q3S5d4-1754848053-1.0.1.1-nj_odtmtJqugLFZ8fCRr_vnsd1blt3vsIjlz9bJ6vjo"
+    allowfullscreen
+    sandbox="allow-same-origin allow-scripts allow-forms"
+  ></iframe>
 </body>
 </html>
